fixed header issue on mobile design on contacts

--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -971,5 +971,9 @@ input[type="number"] {
       width: 70px;
       height: 70px;
     }
+
+    .header_in_contact {
+      margin-top: unset;
+    }
   }
 }
